# Moidcraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: block.frag  block.frag.spv  block.vert  block.vert.spv  ui.frag  ui.frag.spv  ui.vert  ui.vert.spv  ui_button.frag  ui_button.frag.spv
src/: main.cpp
src/core/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  input.cpp  input.hpp  settings.cpp  settings.hpp  texture_manager.cpp  texture_manager.hpp  types.hpp  vk_check.hpp  window.cpp  window.hpp
src/inventory/: crafting.cpp  crafting.hpp  inventory.cpp  inventory.hpp
src/player/: player.cpp  player.hpp
src/ui/: font_data.hpp  menu_state.cpp  menu_state.hpp  pause_state.cpp  pause_state.hpp  settings_state.cpp  settings_state.hpp  ui_renderer.cpp  ui_renderer.hpp
src/vulkan/: vulkan_context.cpp  vulkan_context.hpp  vulkan_mesh.cpp  vulkan_mesh.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/world/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  chunk_mesh.cpp  chunk_mesh.hpp  terrain_gen.cpp  terrain_gen.hpp  tree_blueprint.cpp  tree_blueprint.hpp  world.cpp  world.hpp
